# engine

./: .gitignore  CMakeLists.txt
config/: buildings.config  mapgen.config  research.config  settings.config  textures.config
scripts/: config.lua  mainmenu.lua  profit.lua  profit.script  test.lua  test.script
src/: CMakeLists.txt  game.cpp
src/engine/: CMakeLists.txt  audio.h  config.h  db.h  engine.cpp  engine.h  geometry.h  input.h  mapgen.h  scene.h  screen.h  scripting.h  sim.h  texture.cpp  texture.h  tilemap.cpp  tilemap.h  ui.cpp  ui.h  util.cpp  util.h
src/system/: .buildings.cpp.swp  .systems.h.swp  CMakeLists.txt  buildings.h  player.h  research.h  simulate.h  system.cpp  system.h
src/ui/: CMakeLists.txt  boxtexture.h  buildingsmenu.cpp  buildingsmenu.h  commonui.h  gamewidget.h  hud.cpp  hud.h  mainmenu.h  messagebox.h  minimap.h  researchmenu.h  textinputwidget.h  timewidget.h  townsmenu.h
